# open-camara

./: .gitignore  README.md  pyproject.toml
data/: diccionario.json  diputados.parquet  votaciones.parquet  votos.parquet
notebooks/: datos-abiertos-legislativos.ipynb
open_camara/: __init__.py
